--- a/.github/workflows/publish-to-ipfs.yml
+++ b/.github/workflows/publish-to-ipfs.yml
@@ -46,8 +46,10 @@ jobs:
         run: pnpm build
 
       - name: Deploy to IPFS
-        uses: aquiladev/ipfs-action@master
+        uses: aquiladev/ipfs-action@v0.3.1
         id: ipfs
+        env:
+          NODE_OPTIONS: '--enable-source-maps --experimental-fetch'
         with:
           path: ./out
           service: ipfs
