--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "safe-anywhere",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Deploy your Safe across chains - with same address",
   "private": true,
   "repository": {
@@ -11,7 +11,14 @@
   "bugs": {
     "url": "https://github.com/ElvisKrop/safe-account-anywhere/issues"
   },
-  "keywords": ["safe", "blockchain", "ethereum", "wallet", "cross-chain", "deployment"],
+  "keywords": [
+    "safe",
+    "blockchain",
+    "ethereum",
+    "wallet",
+    "cross-chain",
+    "deployment"
+  ],
   "author": "ElvisKrop",
   "license": "MIT",
   "scripts": {
